# roli-trade-ad-automation

./: .gitattributes  .gitignore  Cargo.lock.old  cargo.toml  index.html  package-lock.json  package.json  readme.md  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/: ClientBuilder in roli - Rust.html  copilot-instructions.md  itemdetails.json  minibeast.chatmode.md  thumbssm.json  www.rolimons.com.har
.github/chatmodes/: minibeast.chatmode.md
.github/workflows/: release.yml
public/: how-to-use.md
release/roli-trade-ad-automation-v0.1.0/: .gitignore
src/: App.tsx  index.css  main.rs  trade_ad.rs
src-old-cli/: cookie.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: ads_runner.rs  ads_storage.rs  auth_storage.rs  avatar_thumbnails.rs  cookie.rs  lib.rs  main.rs  notification_settings.rs  player_assets.rs  post_trade_ad.rs  request_search_roli.rs  roblox_user.rs  rolimons_players.rs  thumbnails.rs  trade_ad.rs  value_change_detector.rs  verification.rs
src/components/: AdvertisementManager.tsx  InventoryPicker.tsx  ItemsGrid.tsx  Login.tsx  LoginFlow.tsx  OfferSlots.tsx  PaginationControls.tsx  PlayerAndCookieInputs.tsx  RequestSlots.tsx  SearchBar.tsx  SelectorButtons.tsx  TerminalLogs.tsx  TradeAdSelector.tsx  Verification.tsx
src/contexts/: AuthContext.tsx
src/utils/: markdown.ts
