[package]
name = "roli-trade-ad-automation"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "roli_trade_ad_automation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.5.2", features = [] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
roli = "0.7.2"
rusqlite = { version = "0.30", features = ["bundled"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
once_cell = "1.18"
urlencoding = "2.1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

